--- a/2/05.v-resource基本使用.html
+++ b/2/05.v-resource基本使用.html
@@ -1,105 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>vue-resource</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <!-- 导入vue包 -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.8/dist/vue.js"></script>
     <script src="https://cdn.bootcss.com/vue-resource/1.5.1/vue-resource.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div id="app">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">添加品牌</h3>
-            </div>
-            <div class="panel-body form-inline">
-               <label>
-                   Name:
-                   <input type="text" v-model="name" class="form-control">
-               </label>
-               <label>
-                   <input type="button" value="添加" class="btn btn-success" @click="add()">
-               </label>
-            </div>
-        </div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Ctime</th>
-                    <th>Opt</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr v-for="item in list" :key="item.id">
-                    <th>@{{item.mg_id}}</th>
-                    <td>@{{item.mg_name}}</td>
-                    <td>@{{item.last_login_time}}</td>
-                    <td>
-                        <a href="" @click.prevent="del(item.mg_id)">删除</a>
-                    </td>
-                </tr>  
-            </tbody>
-        </table>
+        <input type="button" value="GetInfo按钮" @click="GetInfo">
+        <!-- <input type="button" value="PostInfo按钮" @click="PostInfo">
+        <input type="button" value="JsonpInfo按钮" @click="JsonpInfo">  -->
     </div>
     <script>
-        Vue.http.options.emulateJSON = true;
-        Vue.http.options.root = '/admin/vue/';
-
         var vm = new Vue({
             el:'#app',
-            data:{
-                name:'',
-                list:'',
-            },
-            // http:{
-            //     root:'/admin/vue/',
-            //     headers: {
-            //       Authorization: 'Basic YXBpOnBhc3N3b3Jk'
-            //     }
-            // },
-            created(){
-                this.getAlllist()
-                //console.log('ok')
-            },
+            data:{},
             methods:{
-                add(){
-                    this.$http.post('add',{mg_name:this.name}).then(res => {
-                        if(res.body.status == 0){
-                            this.getAlllist()
-                            this.name = ''
-                        }else{
-                            alert('添加失败')
-                        }
+                GetInfo(){ //发起get请求
+                    this.$http.get('http://www.yt.cc/api/getinfo').then(function(res){
+                        console.log(res.body)
                     })
                 },
-                getAlllist(){
-                    //由于已经加载了vue-resource 可以通过this.$http
-                    this.$http.get('list').then(res => {
-
-                        if(res.body.status == 0){
-                            this.list = res.body.data
-                        }else{
-                            alert('获取失败')
-                        }
-                    })
-                },
-                del(id){
-                    this.$http.post('del/'+id).then(res=>{
-                        if(res.body.status == 0){
-                            this.getAlllist()
-                        }else{
-                            alert('error')
-                        }
-                    })
-                    //alert(id)
-                }
+                // PostInfo(){ //手动发起的请求默认是没有表单格式
+                //     this.$http.post('http://www.yt.cc/admin/postinfo',{},{emulateJSON:true}).then(function(res){
+                //         console.log(res.body)
+                //     })
+                // },
+                // JsonpInfo(){
+                //     this.$hhtp.jsonp('http://www.yt.cc/admin/jsonpinfo').then(res=>{
+                //         console.log(res.body)
+                //     })
+                // }
             }
         })
     </script>
